[package]
name = "bfjit-osr"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
dynasm = "0.3.2"
dynasmrt = "0.3.1"
libc = "0.2"
nix = "0.13"
